--- a/pix.html
+++ b/pix.html
@@ -88,9 +88,9 @@
 </head>
 <body>
   <div class="container">
-    <h1>Contribuição via Pix 🎁</h1>
-    <p>Se desejar contribuir com a festa da Rosimeire, use a chave Pix abaixo:</p>
-    <div class="pix-key" id="pixKey">99000024153</div><br>
+    <h1>Presente via Pix 🎁</h1>
+    <p>Se quiser demonstrar seu carinho com um presente, a chave Pix está logo abaixo:</p>
+    <div class="pix-key"   id="pixKey">99000024153</div><br>
     <button onclick="copiarPix()">Copiar Chave Pix</button>
   </div>
 
