--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   <div class="container">
     <div class="info-box">
       <p><strong>Tema:</strong> Réveillon</p>
-      <p><strong>Vestimenta:</strong> Branco, short, chinelo ou como você se sentir bem 🌟</p>
+      <p><strong>Vestimenta:</strong> Vestimento do tema ou como você se sentir bem 🌟</p>
     </div>
 
     <div class="info-box">
