--- a/index.html
+++ b/index.html
@@ -142,10 +142,8 @@
 
   <header>
     <h1>Rosimeire 44</h1>
-    <h2>Réveillon Antecipado 🎉</h2>
-    <p class="mensagem">
-      Você está convidado para uma noite especial com festa, alegria, e muita energia boa para celebrar o novo ciclo da Rosimeire! ✨
-    </p>
+    <h2>Réveillon antecipado 🎉</h2>
+    <p class="mensagem">A alegria do Réveillon é apenas o início de um novo ciclo repleto de vitórias e momentos especiais. Por isso, quero te convidar para uma noite inesquecível!✨</p>
   </header>
 
   <div class="container">
@@ -168,7 +166,7 @@
     </div>
 
     <div class="info-box">
-      <p>🎁 Seu carinho é o melhor presente!</p>
+      <p>🎁 Sugestões de Presentes 🎁</p>
       <a class="btn" href="pix.html"> Presentes </a>
     </div>
   </div>
