--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
     </div>
 
     <div class="info-box">
-      <p>🎁 Sugestões de Presentes 🎁</p>
-      <a class="btn" href="pix.html"> Presentes </a>
+      <p>🎁 Sugestão de Presente 🎁</p>
+      <a class="btn" href="pix.html"> Presente </a>
     </div>
   </div>
 
