--- a/pix.html
+++ b/pix.html
@@ -59,7 +59,7 @@
       box-shadow: 0 0 20px rgba(0,0,0,0.4);
       position: relative;
       z-index: 1;
-      margin-top: 150px; /* Espaço para a imagem */
+      margin-top: 150px; /* Espaço ara a imagem */
     }
 
     h1 {
